finished the website

--- a/app/assets/styles/modules/_about.css
+++ b/app/assets/styles/modules/_about.css
@@ -8,7 +8,16 @@
     }
 
     &__text{
+        padding-top: 15px;
+        margin-left: 60px;
+        
+        @mixin atSmall{
+            padding-top: 0;
+        }
 
+        @mixin atLarge{
+            padding-top: 60px;
+        }
     }
 
 }
