--- a/app/assets/styles/modules/_contact.css
+++ b/app/assets/styles/modules/_contact.css
@@ -1,9 +1,14 @@
 .contact{
     text-align: center;
     background-color:#f4f4f4;
-    padding-bottom: 45px;
+    padding: 45px 0;
     
     &__text{
         font-size:1.2rem;
+        
+
+        @mixin atMedium {
+            font-size:1.3rem;
+        }
     }
 }
