--- a/app/assets/styles/modules/_portfolio.css
+++ b/app/assets/styles/modules/_portfolio.css
@@ -1,28 +1,49 @@
-.portfolio-item{
-    text-align: center;	
-    position: relative;
-    cursor: pointer;	
-    perspective: 500px;
-    
-    &__text{
-        font-size: 1.3rem;
-        width: 70%;
-        height: 80%;	
-        padding: 5% 8%;
-        position: absolute;
-        content: "";
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%) rotateY(90deg);
-        transform-origin: 50%;
-        background: rgba(255,255,255,0.9);	
-        opacity: 0;
-        transition: all 0.4s ease-in;
+.gallery {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+
+    &__item {
+        box-sizing: border-box;
+        width: 100%;
+        padding: 1rem;
+        margin: 1rem;
+        box-shadow: 1px 2px 40px 2px rgba(160, 160, 160, .5);
+
+        @mixin atLarge{
+          flex-basis: calc((100% / 4) - 2rem);
+        }
     }
 
-    &:hover &__text{
-        transform: translate(-55%, -50%) rotateY(0deg);
-        opacity: 1;
+    &__image {
+        width: 100%;
+        display: block;
+        transition: opacity .3s ease-out;
+
+        &:hover{
+            opacity: .5;
+        }
+
+        &-caption {
+            margin-top: 1rem;
+            font-size: 1.2rem;
+            color: #000;
+            line-height: 1;
+            letter-spacing: 1px;
+        }
     }
 
+    /* @media only screen and (min-width: 33.75em){
+    .gallery__item{
+    }
+  }
+  
+  @media only screen and (min-width: 48em){
+    .gallery__item{
+    }
+  }
+  
+  @media only screen and (min-width: 60em){
+    .gallery__item{
+    } }*/
 }
