--- a/app/assets/styles/modules/_modal.css
+++ b/app/assets/styles/modules/_modal.css
@@ -41,7 +41,7 @@
         font-size: 2rem;
         transform: scaleX(1.2);
         transform-origin: 100% 0;
-        color: blue;
+        color: $orange;
         &:hover {
             color: $orange;
             cursor: pointer;
